--- a/author.html
+++ b/author.html
@@ -2,7 +2,7 @@
 <html>
  
 <body>
-    <title>Java Script</title>
+    <title>Author page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <h1>Author Entry Amulya Boggavarapu</h1>
@@ -10,7 +10,6 @@
 <h2>Getting input</h2>
 
 <form>
-        
         <label for="hidden-author">The hidden author name:</label>
         <input type="password" id="hidden-author" value="Dickens">
         <br>
