--- a/author.html
+++ b/author.html
@@ -6,17 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <h1>Author Entry Amulya Boggavarapu</h1>
-
-<h2>Getting input</h2>
-
 <form>
         <label for="hidden-author">The hidden author name:</label>
-        <input type="password" id="hidden-author" value="Dickens">
+        <input type="password" class="form-control" id="hidden-author" value="Dickens">
         <br>
         <label for="guess-author">Guess the author:</label>
         <input type="text" id="guess-author">
         <br>
-        <input type="button" value="Check the guess" onclick="checkAuthor()">
+        <input type="button" class="btn btn-outline-primary" value="Check the guess" onclick="checkAuthor()">
     </form>
     <div id="results">
         Good: <span id="good-count">0</span> Oops: <span id="oops-count">0</span>
