--- a/cruise.html
+++ b/cruise.html
@@ -38,16 +38,17 @@
 <form>
     <div class="form-group">
         <label for="days">Enter the number of days</label>
-        <input type="text" id="days" value="7">
+        <input type="text" id="days" value="day">
     </div>
     <div class="form-group">
         <label for="price">Enter price</label>
-        <input type="text" id="price" value="1000">
+        <input type="text" id="price" value="price" >
     </div>
         <input type="button" value="Update the cruise" onclick="updateCruise()">
 </form>
 <script>
     function updateCruise() {
+            my_cruise={};
             var days = document.getElementById("days").value;
             var price = document.getElementById("price").value;
             my_cruise["days"] = days;
